build: disable source maps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,8 @@
     "rootDir": ".",
     "outDir": ".",
     "resolveJsonModule": true,
-    "composite": true
+    "composite": true,
+    "sourceMap": false
   },
-  "files": [
-    "package.json"
-  ]
+  "files": ["package.json"]
 }
